bonus/confs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-ingress
  labels:
    app: gitlab
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
# spec:
#   rules:
#   - http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: gitlab-webservice-default
#             port:
#               number: 8181
